<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_logout"
            app:showAsAction="always"
            android:title="@string/menu_chusr" />
        <item
            android:id="@+id/nav_mtask"
            android:icon="@drawable/ic_menu_mtask"
            android:title="@string/menu_mtask"
            />
    </group>
</menu>