<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="164dp"
                android:layout_height="164dp"
                android:layout_margin="24dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/ic_logo"
                android:contentDescription="Logo Image" />


            <TextView
                android:textAppearance="@style/LargeCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name" />


            <EditText
                android:id="@+id/loginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="Имя пользователя"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                style="@style/LoginFormInputField"
                  />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionDone"
                android:hint="Пароль"

                android:inputType="textPassword"
                android:maxLines="1"

                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"

                style="@style/LoginFormInputField"
                  />


            <RadioGroup
                android:id="@+id/RadioGroupRunMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp">

                <RadioButton
                    android:id="@+id/radio_FindPasp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/menu_findpasp"
                    android:textColor="#FFF" />

                <RadioButton
                    android:id="@+id/radio_MTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_mtask"
                    android:textColor="#FFF" />

                <RadioButton
                    android:id="@+id/radio_Sklad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/menu_sklad"
                    android:textColor="#FFF" />

                <RadioButton
                    android:id="@+id/radio_Sklad_outm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/menu_skladom"
                    android:textColor="#FFF" />

            </RadioGroup>

            <Button
                android:id="@+id/authButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/button_connect"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                style="@style/LoginFormButton"
                />

        </LinearLayout>
    </ScrollView>



</FrameLayout>