<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Cod_Predm"
                    style="@style/DSETitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:text="Title"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/Name_Predm"
                    style="@style/DSEDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Наименование" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <TextView
                        android:id="@+id/Cod_Pasp_Place"
                        style="@style/PlaceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:maxLines="1"
                        android:text="Откуда" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/chevron_right"
                        android:contentDescription=">" />

                    <TextView
                        android:id="@+id/Cod_Pln_Pasp_Place"
                        style="@style/PlaceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="4dp"
                        android:maxLines="1"
                        android:text="Куда" />
                </FrameLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center" >


                <ImageView
                    android:id="@+id/statusImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/checkbox_gray"
                    android:contentDescription="Check image" />

            </FrameLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#AAAAAA"
            android:contentDescription="Separator" />

        <FrameLayout
            android:id="@+id/expandTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/Cod_Pasp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                style="@style/PaspTitle" />

            <TextView
                android:id="@+id/expandTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                style="@style/PaspTitle" />


            <CheckBox
                android:id="@+id/ExpandCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="2dp"

                android:button="@drawable/checkbox_expand" />
        </FrameLayout>





        <LinearLayout
            android:id="@+id/taskDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible">


            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow android:layout_width="match_parent">

                    <TextView
                        style="@style/DataCaption"
                        android:text="@string/NamePredm" />

                    <TextView
                        android:id="@+id/Name_PredmMat"
                        style="@style/DataText"
                        android:layout_marginStart="8dp"
                        android:layout_weight="3" />

                    <TextView
                        style="@style/MicroCaption"
                        android:layout_gravity="center"
                        android:text="Количество" />


                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/DataCaption"
                        android:text="@string/Sortam" />

                    <TextView
                        android:id="@+id/Sortam_Mat"
                        style="@style/DataText"
                        android:layout_marginStart="8dp"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/PaspKolvo"
                        style="@style/MicroValue"
                        android:gravity="center" />

                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/DataCaption"
                        android:text="@string/Marka" />

                    <TextView
                        android:id="@+id/Marka_Mat"
                        style="@style/DataText"
                        android:layout_width="fill_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="3" />

                    <TextView />

                </TableRow>

                <TableRow android:layout_marginTop="6dp">

                    <TextView
                        style="@style/MicroCaption"
                        android:text="@string/MDTSm" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_weight="3" />

                    <TextView
                        style="@style/MicroCaption"
                        android:text="@string/MDt" />

                </TableRow>

                <TableRow>


                    <TextView
                        android:id="@+id/MassSm"
                        style="@style/MicroValue"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/Massa"
                        style="@style/MicroValue"
                        android:gravity="center_horizontal" />

                </TableRow>


            </TableLayout>


            <TextView
                style="@style/MicroCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="№ паспорта"
                android:visibility="gone" />

            <TextView
                android:id="@+id/codPaspDetail"
                style="@style/MicroValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />


            <TextView
                style="@style/MicroCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/FIOZ" />

            <TextView
                android:id="@+id/Name_Sub"
                style="@style/MicroValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>